--- a/Proyecto-Final-HTML/pom.xml
+++ b/Proyecto-Final-HTML/pom.xml
@@ -35,23 +35,44 @@
   </dependencies>
 
   <build>
+    <plugins>
+        <plugin>
+        <executions> 
+            <execution> 
+                <phase>package</phase> 
+                <goals> 
+                    <goal>single</goal> 
+                </goals> 
+            </execution> 
+        </executions> 
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+            <archive>
+            <manifest>
+                <mainClass>com.mycompany.app.App</mainClass>
+            </manifest>
+            </archive>
+            <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+        </configuration>
+        </plugin>
+    </plugins>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
-    <plugin>
-      <artifactId>maven-assembly-plugin</artifactId>
-      <configuration>
-        <archive>
-          <manifest>
-            <mainClass>com.mycompany.app.App</mainClass>
-          </manifest>
-        </archive>
-        <descriptorRefs>
-          <descriptorRef>jar-with-dependencies</descriptorRef>
-        </descriptorRefs>
-      </configuration>
-    </plugin>
-
-
+        <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+            <archive>
+            <manifest>
+                <mainClass>com.mycompany.app.App</mainClass>
+            </manifest>
+            </archive>
+            <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+            </descriptorRefs>
+        </configuration>
+        </plugin>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
