--- a/Proyecto-Final-HTML/pom.xml
+++ b/Proyecto-Final-HTML/pom.xml
@@ -1,3 +1,8 @@
+<!--
+    Briseño Lira Andrés          4CM14
+    Cabrera García Luis Ángel    4CM11
+    Olivares Ménez Gloria Oliva  4CM12
+-->
 <?xml version="1.0" encoding="UTF-8"?>
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
